root scaffolding for internationalizaiton ok

--- a/translation/fr.json
+++ b/translation/fr.json
@@ -1,5 +1,4 @@
 {
-  "HomePage": {
-    "title": "Bonjour Monde!"
-  }
+  "mainTitle": "Carte Chronologique des Versions du Logiciel",
+  "VersionMapPage": { }
 }
