finalize, added german language

--- a/translation/de.json
+++ b/translation/de.json
@@ -1,8 +1,8 @@
 {
-  "mainTitle": "Softwares Version Timeline",
+  "mainTitle": "Zeitleiste der Softwareversionen",
   "components": {
     "languageSelector": {
-      "language": "Language"
+      "language": "Sprache"
     }
   },
   "pages": {
