--- a/translation/fr.json
+++ b/translation/fr.json
@@ -1,4 +1,11 @@
 {
-  "mainTitle": "Carte Chronologique des Versions du Logiciel",
-  "VersionMapPage": { }
+  "mainTitle": "Chronologie des Versions du Logiciels",
+  "components": {
+    "languageSelector": {
+      "language": "Langue"
+    }
+  },
+  "pages": {
+    "versionMap": { }
+  }
 }
