theme selector scaffolding

--- a/translation/de.json
+++ b/translation/de.json
@@ -3,6 +3,12 @@
   "components": {
     "languageSelector": {
       "language": "Sprache"
+    },
+    "themeSelector": {
+      "theme": "Thema",
+      "lightMode": "Lichtmodus",
+      "darkMode": "Dunkelmodus",
+      "auto": "Auto"
     }
   },
   "pages": {
