--- a/translation/en.json
+++ b/translation/en.json
@@ -1,5 +1,5 @@
 {
-  "mainTitle": "Softwares Version Timeline",
+  "mainTitle": "Software Versions Timeline",
   "components": {
     "languageSelector": {
       "language": "Language"
