--- a/translation/de.json
+++ b/translation/de.json
@@ -29,6 +29,11 @@
     "supportedSoftwares": {
       "supportedSoftwares": "Unterstützte Software"
     },
+    "zoomPanel": {
+      "zoomIn": "Vergrößern",
+      "zoomOut": "Verkleinern",
+      "reset": "Zoom Zurücksetzen"
+    },
     "footer": {
       "copyright": "Urheberrecht © 2025 {name}. Alle Rechte vorbehalten."
     }
