Add/remove timeline logic
* dynamic timeline height

* translation

* remove logic

* add new timeline button initialy placed

* AddNewTimelineButton component

* dropdown added and hidden

* add new timeline button style

* dropdown add software button must be changed

* zoom scale handled

* handle new software adding

* translation fix

* configurable timeline number control

--- a/translation/de.json
+++ b/translation/de.json
@@ -29,6 +29,12 @@
     "supportedSoftwares": {
       "supportedSoftwares": "Unterstützte Software"
     },
+    "sideLogo": {
+      "removeTimeline": "ZEITLEISTE ENTFERNEN"
+    },
+    "addnewTimelineButton": {
+      "addTimeline": "Zeitachse Hinzufügen"
+    },
     "zoomPanel": {
       "zoomIn": "Vergrößern",
       "zoomOut": "Verkleinern",
