--- a/translation/en.json
+++ b/translation/en.json
@@ -29,6 +29,12 @@
     "supportedSoftwares": {
       "supportedSoftwares": "Supported Softwares"
     },
+    "sideLogo": {
+      "removeTimeline": "REMOVE TIMELINE"
+    },
+    "addnewTimelineButton": {
+      "addTimeline": "Add Timeline"
+    },
     "zoomPanel": {
       "zoomIn": "Zoom In",
       "zoomOut": "Zoom Out",
