--- a/translation/hu.json
+++ b/translation/hu.json
@@ -39,6 +39,7 @@
       "zoomIn": "Nagyítás",
       "zoomOut": "Kicsinyítés",
       "reset": "Nagyítás Visszaállítása",
+      "zoomLevel": "Nagyítási Szint",
       "scrollZoomEnabled": "Görgetéses Nagyítás Engedélyezve",
       "scrollZoomDisabled": "Görgetéses Nagyítás Lealitva"
 
