min timeline bug fixed

--- a/translation/hu.json
+++ b/translation/hu.json
@@ -14,13 +14,13 @@
       "months": {
         "jan": "Jan",
         "feb": "Febr",
-        "mar": "Márc",
+        "mar": "Már",
         "apr": "Ápr",
         "may": "Máj",
         "jun": "Jún",
         "jul": "Júl",
         "aug": "Aug",
-        "sep": "Szept",
+        "sep": "Szep",
         "oct": "Okt",
         "nov": "Nov",
         "dec": "Dec"
