--- a/translation/en.json
+++ b/translation/en.json
@@ -45,6 +45,16 @@
     },
     "footer": {
       "copyright": "Copyright © 2025 {name}. All rights reserved."
+    },
+    "popUpBox": {
+      "buttons": {
+        "yes": "Yes",
+        "no": "No"
+      },
+      "messages": {
+        "timelineDisplayMaxLimit": "Cannot display more than {maxTimelineDisplayLimit} software timelines",
+        "timelineDisplayMinLimit": "Cannot display less than {minTimelineDisplayLimit} software timelines"
+      }
     }
   },
   "pages": {
