Warn timeline nr limit + some pop up box refactor
* initial show logic figured out

* les software limit warning

* close button handler + fix popupbox state message collapse

* translation EN

* all translation

* min timeline limit warn translation ok

* max timeline limit warn translation ok

--- a/translation/en.json
+++ b/translation/en.json
@@ -1,6 +1,16 @@
 {
   "mainTitle": "Software Versions Timeline",
   "components": {
+    "popUpBox": {
+      "buttons": {
+        "yes": "Yes",
+        "no": "No"
+      },
+      "messages": {
+        "timelineDisplayMaxLimit": "Cannot display more than {maxTimelineDisplayLimit} software timelines",
+        "timelineDisplayMinLimit": "Cannot display less than {minTimelineDisplayLimit} software timelines"
+      }
+    },
     "languageSelector": {
       "language": "Language"
     },
