--- a/translation/en.json
+++ b/translation/en.json
@@ -7,6 +7,7 @@
         "no": "No"
       },
       "messages": {
+        "cookieConsent": "We’re using cookies only to remember your language choice. Is that fine with you?",
         "timelineDisplayMaxLimit": "Cannot display more than {maxTimelineDisplayLimit} software timelines",
         "timelineDisplayMinLimit": "Cannot display less than {minTimelineDisplayLimit} software timelines"
       }
