Cookie Modal Implemented
* cookie store functions

* pop up dialog type

* dialog box close logic fixed (finally)

* translation all

* yes/no button pop up box translation

* remove lang selector cookie logic

* translation

* restore footer as server component

* language settings cookie restriction implemented

* modal backdrop

--- a/translation/de.json
+++ b/translation/de.json
@@ -7,6 +7,7 @@
         "no": "Nein"
       },
       "messages": {
+        "cookieConsent": "Wir verwenden Cookies nur, um Ihre Spracheinstellung zu speichern. Wenn Sie diese nicht zulassen, wird nur Englisch verfügbar sein. Stimmen Sie der Verwendung von Cookies zu?",
         "timelineDisplayMaxLimit": "Es können nicht mehr als {maxTimelineDisplayLimit} Software-Zeitachsen angezeigt werden",
         "timelineDisplayMinLimit": "Es können nicht weniger als {minTimelineDisplayLimit} Software-Zeitachsen angezeigt werden"
       }
