--- a/translation/hu.json
+++ b/translation/hu.json
@@ -1,5 +1,6 @@
 {
   "mainTitle": "Szoftververziók Idővonala",
+  "introText": "Ennek az eszköznek az a célja, hogy átfogó áttekintést nyújtson a fontos szoftverkiadási verziókról, megkönnyítve a felhasználók számára az egyes verziók időbeli összehasonlítását. Az átláthatóság érdekében csak a fontos verziókiadások szerepelnek (a hivatalos kiadási részletekért kattintson a szoftver logójára a fent található 'Támogatott Szoftverek' szakaszban). Az ötlet akkor született, amikor az MDN dokumentációt nézve különböző JavaScript funkciók különböző böngésző verziókban érhetők el, egy eszköz, amely időben mutatja a különböző böngésző verziókat, hasznos lenne (így itt van).",
   "components": {
     "popUpBox": {
       "buttons": {
