add toolpit to Button component + navigation toolpit added

--- a/translation/en.json
+++ b/translation/en.json
@@ -4,7 +4,9 @@
   "components": {
     "gridContainer": {
       "navigation": {
-        "monthNavigation": "Month Navigation"
+        "monthNavigation": "Month Navigation",
+        "prevMonth": "Previous Month",
+        "nextMonth": "Next Month"
       }
     },
     "popUpBox": {
