--- a/translation/fr.json
+++ b/translation/fr.json
@@ -64,6 +64,10 @@
     },
     "footer": {
       "copyright": "Droits d'auteur © 2025 {name}. Tous droits réservés."
+    },
+    "horizontalScroll": {
+      "scrollLeft": "Faire Défiler à Gauche",
+      "scrollRight": "Faire Défiler à Droite"
     }
   },
   "pages": {
