--- a/translation/de.json
+++ b/translation/de.json
@@ -49,7 +49,8 @@
       "supportedSoftwares": "Unterstützte Software"
     },
     "sideLogo": {
-      "removeTimeline": "ZEITLEISTE ENTFERNEN"
+      "removeTimeline": "ZEITLEISTE ENTFERNEN",
+      "dropDownToolpit": "Software Auswählen"
     },
     "addNewTimelineButton": {
       "addTimeline": "Zeitachse Hinzufügen"
