--- a/translation/fr.json
+++ b/translation/fr.json
@@ -49,7 +49,8 @@
       "supportedSoftwares": "Logiciels Supportés"
     },
     "sideLogo": {
-      "removeTimeline": "SUPPRIMER LA FRISE CHRONOLOGIQUE"
+      "removeTimeline": "SUPPRIMER LA FRISE CHRONOLOGIQUE",
+      "dropDownToolpit": "Sélectionner le Logiciel"
     },
     "addNewTimelineButton": {
       "addTimeline": "Ajouter une Frise Chronologie"
