--- a/translation/hu.json
+++ b/translation/hu.json
@@ -49,7 +49,8 @@
       "supportedSoftwares": "Támogatott Szoftverek"
     },
     "sideLogo": {
-      "removeTimeline": "IDŐVONAL ELTÁVOLÍTÁSA"
+      "removeTimeline": "IDŐVONAL ELTÁVOLÍTÁSA",
+      "dropDownToolpit": "Szoftvert Kiválasztása"
     },
     "addNewTimelineButton": {
       "addTimeline": "Idővonal hozzáadása"
