--- a/translation/de.json
+++ b/translation/de.json
@@ -49,7 +49,8 @@
       "supportedSoftwares": "Unterstützte Software"
     },
     "sideLogo": {
-      "removeTimeline": "ZEITLEISTE ENTFERNEN"
+      "removeTimeline": "ZEITLEISTE ENTFERNEN",
+      "dropDownTooltip": "Software Auswählen"
     },
     "addNewTimelineButton": {
       "addTimeline": "Zeitachse Hinzufügen"
@@ -64,6 +65,10 @@
     },
     "footer": {
       "copyright": "Urheberrecht © 2025 {name}. Alle Rechte vorbehalten."
+    },
+    "horizontalScroll": {
+      "scrollLeft": "Nach Links Scrollen",
+      "scrollRight": "Nach Rechts Scrollen"
     }
   },
   "pages": {
