--- a/translation/hu.json
+++ b/translation/hu.json
@@ -49,7 +49,8 @@
       "supportedSoftwares": "Támogatott Szoftverek"
     },
     "sideLogo": {
-      "removeTimeline": "IDŐVONAL ELTÁVOLÍTÁSA"
+      "removeTimeline": "IDŐVONAL ELTÁVOLÍTÁSA",
+      "dropDownTooltip": "Szoftvert Kiválasztása"
     },
     "addNewTimelineButton": {
       "addTimeline": "Idővonal hozzáadása"
@@ -65,6 +66,10 @@
     },
     "footer": {
       "copyright": "Szerzői jog © 2025 {name}. Minden jog fenntartva."
+    },
+    "horizontalScroll": {
+      "scrollLeft": "Görgetés Balra",
+      "scrollRight": "Görgetés Jobbra"
     }
   },
   "pages": {
