--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 ----------------------------
-v1.0.0
+v1.1.1
 
-- Initial Release
+- Fix Dropdown Button Look
 
 ----------------------------
 v1.1.0
@@ -16,3 +16,6 @@ v1.1.0
 - Refactored Data Files to JS Objects
 
 ----------------------------
+v1.0.0
+
+- Initial Release
