fix remove timeline icon toolpit

--- a/translation/de.json
+++ b/translation/de.json
@@ -50,7 +50,7 @@
       "supportedSoftwares": "Unterstützte Software"
     },
     "sideLogo": {
-      "removeTimeline": "ZEITLEISTE ENTFERNEN",
+      "removeTimeline": "Zeitleiste Entfernen",
       "dropDownTooltip": "Software Auswählen"
     },
     "addNewTimelineButton": {
