--- a/translation/fr.json
+++ b/translation/fr.json
@@ -50,7 +50,7 @@
       "supportedSoftwares": "Logiciels Supportés"
     },
     "sideLogo": {
-      "removeTimeline": "SUPPRIMER LA FRISE CHRONOLOGIQUE",
+      "removeTimeline": "Supprimer la Frise Chronologique",
       "dropDownTooltip": "Sélectionner le Logiciel"
     },
     "addNewTimelineButton": {
