--- a/translation/hu.json
+++ b/translation/hu.json
@@ -50,7 +50,7 @@
       "supportedSoftwares": "Támogatott Szoftverek"
     },
     "sideLogo": {
-      "removeTimeline": "IDŐVONAL ELTÁVOLÍTÁSA",
+      "removeTimeline": "Idővonal Eltávolítása",
       "dropDownTooltip": "Szoftvert Kiválasztása"
     },
     "addNewTimelineButton": {
