--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,12 @@
 ----------------------------
+v1.1.2
+
+- Change Side Logo Dropdown Character
+- Update robot.txt & sitemap.xml
+- Fix Remove Timeline Icon Tooltip
+- Use SVG icons
+
+----------------------------
 v1.1.1
 
 - Fix Dropdown Button Look
