--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 ----------------------------
+v1.2.1
+
+- Fix Logo Paths
+
+----------------------------
 v1.2.0
 
 - Fix Side Logo & Add New Timeline Button Dropdown Select Bug
