--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 ----------------------------
+v1.2.2
+
+- Timeline Update
+- Update Dependencies
+
+----------------------------
 v1.2.1
 
 - Fix Logo Paths
