--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,12 @@
 ----------------------------
+v1.2.3
+
+- Timeline Updates
+
+----------------------------
 v1.2.2
 
-- Timeline Update
+- Timeline Updates
 - Update Dependencies
 
 ----------------------------
