--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 ----------------------------
+v1.2.4
+
+- Timeline Updates
+- Fix Auto Detect Theme
+
+----------------------------
 v1.2.3
 
 - Timeline Updates
