--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 ----------------------------
+v1.2.5
+
+- Update Next
+- Timeline Update
+
+----------------------------
 v1.2.4
 
 - Timeline Updates
